Mixins for patterns (#912)

--- a/internal/tscode/builder.tmpl
+++ b/internal/tscode/builder.tmpl
@@ -2,6 +2,7 @@
 {{reserveImport .Package.ActionPackagePath "Action" "Builder" "WriteOperation" "Changeset" "saveBuilder" "saveBuilderX" "Orchestrator"}}
 
 {{ $cfg := .CodePath -}}
+{{ $schema := .Schema -}}
 
 {{with .NodeData -}}
 {{ $schemaPath := .GetSchemaPath }}
@@ -11,7 +12,7 @@
 {{ reserveImport "src/ent/generated/loaders" $loaderInfo -}}
 
 
-{{ range .GetImportPathsForDependencies -}}
+{{ range .GetImportPathsForDependencies $schema -}}
   {{ reserveImportPath . true}}
 {{ end}}
 
@@ -40,17 +41,43 @@ function randomNum(): string {
 
 {{$node := useImport .Node}}
 
-type MaybeNull<T extends Ent> = T | null;
-type TMaybleNullableEnt<T extends Ent> = T | MaybeNull<T>;
-
 {{$viewerInfo := $cfg.GetTemplatizedViewer -}}
 {{ reserveImport $viewerInfo.Path $viewerInfo.Name -}}
 {{$viewerType := useImport $viewerInfo.Name -}}
 
+{{$mixinInfo := .GetBuilderMixinInfo $schema -}}
+{{$hasBuilderMixin := $mixinInfo.Imports -}}
+{{ if $hasBuilderMixin -}}
+  class Base {
+    // @ts-ignore not assigning. need for Mixin
+    orchestrator: {{useImport "Orchestrator"}}<{{$node}}, any, {{$viewerType}}>;
+
+    constructor() {}
+
+    isBuilder<T extends {{useImport "Ent"}}>(
+      node: {{useImport "ID"}} | T | {{useImport "Builder"}}<T, any>,
+    ): node is {{useImport "Builder"}}<T, any> {
+      return (node as {{useImport "Builder"}}<T, any>).placeholderID !== undefined;
+    }
+  }
+{{ end}}
+
+type MaybeNull<T extends Ent> = T | null;
+type TMaybleNullableEnt<T extends Ent> = T | MaybeNull<T>;
+
 export class {{$builder}}<
   TInput extends {{$input}} = {{$input}},
   TExistingEnt extends TMaybleNullableEnt<{{$node}}> = {{$node}} | null,
-> implements {{useImport "Builder"}}<{{$node}}, {{$viewerType}}, TExistingEnt> {
+> 
+
+{{ if $hasBuilderMixin }}
+  {{ range $mixinInfo.Imports -}}
+    {{ $ignore := useImport .Import -}}
+  {{end -}}
+  extends {{$mixinInfo.Extends }}
+{{ end -}}
+
+implements {{useImport "Builder"}}<{{$node}}, {{$viewerType}}, TExistingEnt> {
   orchestrator: {{useImport "Orchestrator"}}<{{$node}}, TInput, {{$viewerType}}, TExistingEnt>;
   readonly placeholderID: {{useImport "ID"}};
   readonly ent = {{$node}};
@@ -64,6 +91,9 @@ export class {{$builder}}<
     action: {{useImport "Action"}}<{{$node}}, {{useImport "Builder"}}<{{$node}}, {{$viewerType}}, TExistingEnt>, {{$viewerType}}, TInput, TExistingEnt>,
     public readonly existingEnt: TExistingEnt,
   ) {
+    {{ if $hasBuilderMixin }}
+      super();
+    {{ end -}}
     this.placeholderID = `$ent.idPlaceholderID$ ${randomNum()}-{{$node}}`;
     this.input = action.getInput();
     const updateInput = (d: {{$input}}) => this.updateInput.apply(this, [d]);
@@ -121,79 +151,7 @@ export class {{$builder}}<
     }
   {{end -}}
 
-  {{ $edgeInfos := edgeInfos .EdgeInfo.Associations -}}
-  {{ range $edge := $edgeInfos -}}  
-    {{ $node := useImport .Node -}}
-    {{ $polymorphicEdge := $edge.Edge.PolymorphicEdge -}}
-  {{ if $polymorphicEdge -}}
-    {{$edge.TSAddMethodName}}(...nodes: ({{$node}} | Builder<{{$node}}, any>)[]): {{$builder}}<TInput, TExistingEnt> {
-  {{ else -}}
-  {{/* for PolymorphicEdges, this API doesn't work since we don't know the type. callers should call addLikerID in a map */}}  
-    {{$edge.TSAddMethodName}}(...nodes: (ID | {{$node}} | Builder<{{$node}}, any>)[]): {{$builder}}<TInput, TExistingEnt> {
-  {{ end -}}
-    for (const node of nodes) {
-      {{ if $polymorphicEdge -}}
-        if (this.isBuilder(node)) {
-          this.orchestrator.addOutboundEdge(
-            node, 
-            {{useImport "EdgeType"}}.{{$edge.TSEdgeConst}},
-            // nodeType will be gotten from Executor later
-            "",
-          );
-        } else {
-          this.orchestrator.addOutboundEdge(
-            node.id, 
-            {{useImport "EdgeType"}}.{{$edge.TSEdgeConst}},
-            node.nodeType,
-          );
-        }
-      {{ else -}}
-        if (this.isBuilder(node)) {
-          this.{{$edge.TSAddIDMethodName}}(node);
-        } else if (typeof node === "object") {
-          this.{{$edge.TSAddIDMethodName}}(node.id);
-        } else {
-          this.{{$edge.TSAddIDMethodName}}(node);
-        }
-      {{ end -}}
-    }
-    return this;
-  }
-
-  {{$edge.TSAddIDMethodName}}(
-    id: {{useImport "ID"}} | Builder<{{$node}}, any>, 
-    {{ if $polymorphicEdge -}}
-      nodeType: {{useImport "NodeType"}},
-    {{ end -}}
-    options?: {{useImport "AssocEdgeInputOptions"}}
-  ): {{$builder}}<TInput, TExistingEnt> {
-    {{/* TODO need inbound edges also */}}
-    this.orchestrator.addOutboundEdge(
-      id, 
-      {{useImport "EdgeType"}}.{{$edge.TSEdgeConst}},
-      {{ if $polymorphicEdge -}}
-        nodeType,
-      {{ else -}}
-        {{useImport "NodeType"}}.{{.Node}},
-      {{end -}}
-      options,
-    );
-    return this;
-  }
-
-  {{$edge.TSRemoveMethodName}}(...nodes: (ID | {{$node}})[]): {{$builder}}<TInput, TExistingEnt> {
-    for (const node of nodes) {
-      if (typeof node === "object") {
-        this.orchestrator.removeOutboundEdge(node.id, {{useImport "EdgeType"}}.{{$edge.TSEdgeConst}});
-      } else {
-        this.orchestrator.removeOutboundEdge(node, {{useImport "EdgeType"}}.{{$edge.TSEdgeConst}});
-      }
-    }
-    return this;
-  }
-
-  {{end -}}
-
+  {{ template "edge_builder.tmpl" .BuilderEdges $schema -}}
 
   async build(): Promise<{{useImport "Changeset"}}> {
     return this.orchestrator.build();
