--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -404,7 +404,7 @@ export class {{$baseClass}} {
   {{ range $edge := .EdgeInfo.FieldEdges -}}
     {{  $edgeName := .CamelCaseEdgeName -}}
     {{ if $edge.Polymorphic}}
-      async load{{$edgeName}}(): Promise<{{useImport "Ent"}}| null>{
+      load{{$edgeName}}(): Promise<{{useImport "Ent"}}| null>{
         {{ if $edge.Nullable -}}
           if (!this.{{$edge.TSFieldName}}) {
             return null;
@@ -431,7 +431,7 @@ export class {{$baseClass}} {
     {{if $edge.IsList -}}
       {{$edgeNode := .NodeInfo.Node -}}
       {{if $edge.Nullable -}} 
-        async load{{$edgeName}}(): Promise<{{useImport $edgeNode}}[]|null> {
+        load{{$edgeName}}(): Promise<{{useImport $edgeNode}}[]|null> {
           if (!this.{{$edge.TSFieldName}}) {
             return null;
           } 
@@ -442,7 +442,7 @@ export class {{$baseClass}} {
           );
         }
       {{ else -}}
-        async load{{$edgeName}}(): Promise<{{useImport $edgeNode}}[]> {
+        load{{$edgeName}}(): Promise<{{useImport $edgeNode}}[]> {
           return {{useImport "loadEnts"}}(
             this.viewer, 
             {{useImport $edgeNode}}.loaderOptions(),
@@ -454,20 +454,21 @@ export class {{$baseClass}} {
 
     {{ if $edge.NonPolymorphicList -}}
       {{with .NodeInfo -}}
-        async load{{$edgeName}}(): Promise<{{useImport .Node}}|null> {
-          {{ $field := $nodeData.GetFieldByName $edge.FieldName -}}
-          {{ if and $field ($field.HasAsyncAccessor $cfg) -}}
+        {{ $field := $nodeData.GetFieldByName $edge.FieldName -}}
+        {{ if and $field ($field.HasAsyncAccessor $cfg) -}}
+          async load{{$edgeName}}(): Promise<{{useImport .Node}}|null> {
             const {{$edge.TSFieldName}} = await this.{{$edge.TSFieldName}}();
             if (!{{$edge.TSFieldName}}) {
               return null;
             }
-          {{ else -}}
-            {{ if $edge.Nullable -}}
-              if (!this.{{$edge.TSFieldName}}) {
-                return null;
-              }
-            {{end -}}
-          {{ end}}
+        {{ else -}}
+          load{{$edgeName}}(): Promise<{{useImport .Node}}|null> {
+          {{ if $edge.Nullable -}}
+            if (!this.{{$edge.TSFieldName}}) {
+              return null;
+            }
+          {{end -}}
+        {{ end}}
           return {{useImport "loadEnt"}}(
             this.viewer, 
             {{ if and $field ($field.HasAsyncAccessor $cfg) -}}
