--- a/internal/tscode/mixin_builder.tmpl
+++ b/internal/tscode/mixin_builder.tmpl
@@ -44,7 +44,7 @@ interface {{$p.GetBuilderInterfaceName}}<T extends {{$p.GetMixinWithInterfaceNam
 {{$builderName := printf "%sIsh" $p.GetBuilderName }}
 
 type Constructor<T = {}> = new (...args: any[]) => T;
-interface BuilderConstructor<T extends IEntWithFeedback, C = {}> {
+interface BuilderConstructor<T extends {{$p.GetMixinWithInterfaceName}} , C = {}> {
   orchestrator: {{useImport "Orchestrator"}}<T, any, {{$viewerType}}>;
   isBuilder<T extends {{useImport "Ent"}}>(
     node: {{useImport "ID"}} | T | {{useImport "Builder"}}<T, any>,
@@ -53,7 +53,7 @@ interface BuilderConstructor<T extends IEntWithFeedback, C = {}> {
 
 {{$ishName := printf "%sIsh" $p.GetBuilderName -}} 
 
-type {{$ishName}}<T extends IEntWithFeedback> = Constructor<
+type {{$ishName}}<T extends {{$p.GetMixinWithInterfaceName}} > = Constructor<
   BuilderConstructor<T>
 >;
 
