--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -455,7 +455,7 @@ implements {{useImport "Ent"}}<{{$viewerType}}>
   {{ range $edge := .EdgeInfo.FieldEdges -}}
     {{  $edgeName := .CamelCaseEdgeName -}}
     {{ if $edge.Polymorphic}}
-      load{{$edgeName}}(): Promise<{{useImport "Ent"}}| null>{
+      async load{{$edgeName}}(): Promise<{{useImport "Ent"}}| null>{
         {{ if $edge.Nullable -}}
           if (!this.{{$edge.TSFieldName}}) {
             return null;
@@ -482,7 +482,7 @@ implements {{useImport "Ent"}}<{{$viewerType}}>
     {{if $edge.IsList -}}
       {{$edgeNode := .NodeInfo.Node -}}
       {{if $edge.Nullable -}} 
-        load{{$edgeName}}(): Promise<{{useImport $edgeNode}}[]|null> {
+        async load{{$edgeName}}(): Promise<{{useImport $edgeNode}}[]|null> {
           if (!this.{{$edge.TSFieldName}}) {
             return null;
           } 
