support for deprecated values so that ints don't get reused mistakenly

--- a/internal/schema/enum/enum.tmpl
+++ b/internal/schema/enum/enum.tmpl
@@ -6,4 +6,10 @@ export enum {{.Name}} {
     {{ end -}}
     {{.Name}} = {{.Value}},
   {{ end -}}
+  {{ range $data := .DeprecatedValues -}}
+    {{ if .Comment -}}
+      // {{.Comment}}
+    {{ end -}}
+    // @deprecated {{.Name}} = {{.Value}},
+  {{ end -}}
 }
