--- a/internal/graphql/ts_templates/connection.tmpl
+++ b/internal/graphql/ts_templates/connection.tmpl
@@ -1,5 +1,5 @@
 {{reserveImport "graphql" "GraphQLSchema" "GraphQLObjectType" "GraphQLInputObjectType" "GraphQLID" "GraphQLString" "GraphQLEnumType" "GraphQLNonNull" "GraphQLList" "GraphQLFloat" "GraphQLInt" "GraphQLFieldConfig" "GraphQLFieldConfigMap" "GraphQLResolveInfo" "GraphQLInputFieldConfigMap" "GraphQLBoolean" }}
-{{reserveImport .Package.PackagePath "ID" "RequestContext" "AssocEdge"}}
+{{reserveImport .Package.PackagePath "ID" "RequestContext" }}
 {{reserveImport .Package.GraphQLPackagePath "GraphQLTime" "GraphQLEdgeType" "GraphQLConnectionType" "GraphQLEdge" "GraphQLNodeInterface"}}
 {{$conn := .Connection}}
 {{$baseObj := .BaseObj}}
