base edge class
alas, have to regenerate queries for this to take effect

--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -402,7 +402,7 @@ implements {{useImport "Ent"}}<{{$viewerType}}>
     {{with .NodeInfo -}}
      {{ if $uniqueEdge -}}
        {{ $imp := $edge.AssocEdgeBaseImport $cfg}}
-       {{ $reserveImportPath $imp false }}
+       {{ reserveImportPath $imp false }}
       {{$assocEdgeType := useImport $imp.Import }}
       {{$edgeType := useImport "EdgeType"}}
       load{{$edgeName}}Edge(): Promise<{{$assocEdgeType}} | null> {
