--- a/internal/tscode/mixin.tmpl
+++ b/internal/tscode/mixin.tmpl
@@ -59,11 +59,10 @@ export function {{$p.GetMixinName}}<T extends Constructor>(BaseClass: T) {
 
       {{ range $field := $p.FieldInfo.Fields -}}
         {{$val := printf "data.%s" $field.GetDbColName -}}
-        {{$convertType := convertFunc ($field.GetTSFieldType $cfg) -}}
+        {{$convertType := convertFunc $field $cfg -}}
 
         {{if $convertType -}} 
-          {{/* could be BigInt which isn't reserved */ -}}
-          this.{{$field.TsFieldName $cfg}} = {{useImportMaybe $convertType}}({{$val}});
+          this.{{$field.TsFieldName $cfg}} = {{printf "%s(%v)" $convertType $val}};
         {{ else -}}
           this.{{$field.TsFieldName $cfg}} = {{$val}};
         {{end -}}
