--- a/internal/tscode/base.tmpl
+++ b/internal/tscode/base.tmpl
@@ -98,12 +98,7 @@ implements {{useImport "Ent"}}<{{$viewerType}}>
     {{range $field := .FieldInfo.Fields -}}
       {{ if not ($schema.PatternFieldWithMixin $field) -}}
         {{$val := printf "data.%s" $field.GetDbColName -}}
-        {{$convertType := convertFunc $field $cfg  -}}
-        {{if $convertType -}} 
-          this.{{$field.TsFieldName $cfg}} = {{printf "%s(%v)" $convertType $val}};
-        {{ else -}}
-          this.{{$field.TsFieldName $cfg}} = {{$val}};
-        {{end -}}
+        this.{{$field.TsFieldName $cfg}} = {{callAndConvertFunc $field $cfg  $val }}
       {{ end -}}
     {{end}}
   }
